correccion de tildes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     
 
-
+    <!-- cuando sea de resolucion menor se mostraran directamente las opciones en vez de solaparlas -->
     <header class="">
         
             <nav class="navbar navbar navbar-expand-lg nav--background align-content-md-center ">
@@ -115,7 +115,7 @@
         <!-- titulo -->
         <section class="p-2">
             <div class="container-fluid align-content-center text-center text-secondary text-uppercase fs-6">
-                <p class="m-3">conoce a los</p>
+                <p class="m-3">conocé a los</p>
                 <h3 class="text-dark">Oradores</h3>    
             </div>
         </section>
