correccion de tildes

--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
               <div class="card altura--caja">
                 <div class="card-body">
                   <h5 class="card-title text-light">Bs As - Octubre</h5>
-                  <p class="card-text text-light fs-6">Buenos Aires es la provincia y localidad más grande del estado de Argentina, en los Estados Unidos. Honolulu es la más sureña de entre las principales ciudades estadounidenses. Aunque el nombre de honolulu se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y el condado de Honolulu han formado una ciudad-condado consolidada que cubre toda la ciudad (aproximadamente 600km2 de superficie)</p>
-                  <a href="#" class="btn btn-outline-secondary text-light border-light">Conoce más</a>
+                  <p class="card-text text-light fs-6">Buenos Aires es la provincia y localidad más grande del estado de Argentina, en los Estados Unidos. Honolulu es la más sureña de entre las principales ciudades estadounidenses. Aunque el nombre de honolulu se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y el condado de Honolulu han formado una ciudad-condado consolidada que cubre toda la ciudad (aproximadamente 600km2 de superfície)</p>
+                  <a href="#" class="btn btn-outline-secondary text-light border-light">Conocé más</a>
                
                   
                 </div>
