correccion de ortografia

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <h1 class="text-lg-end ">
                        <br><br><br><br><br> Conf Bs As</h1>
                 <p class="text-lg-end">
-                    Bs As llega por primera vez a argentina. Un evento para compartir con nuestra comunidad el conocimiento y experiencia de los expertos que están creando el futuro de internet. Van a conocer a mienbros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos!
+                    Bs As llega por primera vez a argentina. Un evento para compartir con nuestra comunidad el conocimiento y experiencia de los expertos que están creando el futuro de internet. Van a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos!
                 </p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-end ">
                     <button class="btn btn-outline-secondary me-md-2 text-light border-light border-opacity-50" type="button">
